--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^6.0.0-rc.1",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
